updated carousel movement

--- a/index.html
+++ b/index.html
@@ -128,30 +128,30 @@
 
 <section id="carouselmain">
 <div id="drag-container">
-  <div id="spin-container">
+  <div id="spin-container" data-bs-touch="false">
     <!-- Add your images (or video) here -->
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/DataCleansing.png)">
+    <div id="carouselcard" onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/DataCleansing.png)">
       Data Cleansing
     </div>
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/GoogleSuite.png)">
+    <div id="carouselcard"  onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/GoogleSuite.png)">
       Google Suite
     </div>
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/DataResearch.png)">
+    <div id="carouselcard"  onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/DataResearch.png)">
       Data Research
     </div>
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/HypothesisTesting.png)">
+    <div id="carouselcard"  onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/HypothesisTesting.png)">
       Hypothesis Testing
     </div>
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/Python.png)">
+    <div id="carouselcard"  onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/Python.png)">
       Python
     </div>
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/DataVisualisation.png)">
+    <div id="carouselcard"  onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/DataVisualisation.png)">
       Data Visualisation
     </div>
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/SQL.png)">
+    <div id="carouselcard"  onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/SQL.png)">
       SQL
     </div>
-    <div onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/Tableau.png)">
+    <div id="carouselcard"  onmouseover="autoplayoff()" onmouseout="autoplayon()" style="background-image: url(images/carousel/filter.png),url(images/carousel/Tableau.png)">
       Tableau
     </div>
 
