--- a/index.html
+++ b/index.html
@@ -413,10 +413,12 @@
         </div>
         </footer>
         <script src="https://kit.fontawesome.com/574add0346.js" crossorigin="anonymous"></script>
-        <script src="js/scroll.js"></script>
+        <script src="js/scroll.js" id="windowsscroll"></script>
         <script src="js/contact.js"></script>
         <script>
-
+            if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|Windows Phone/i.test(navigator.userAgent)) {
+    $('#windowsscroll').remove();
+}
         </script>
     </body>
 </html>
