--- a/index.html
+++ b/index.html
@@ -413,12 +413,59 @@
         </div>
         </footer>
         <script src="https://kit.fontawesome.com/574add0346.js" crossorigin="anonymous"></script>
-        <script src="js/scroll.js" id="windowsscroll"></script>
         <script src="js/contact.js"></script>
         <script>
             if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|Windows Phone/i.test(navigator.userAgent)) {
-    $('#windowsscroll').remove();
-}
+            }
+            else{
+                function init() {
+            const ele = document.getElementById('cards');
+            ele.style.cursor = 'grab';
+
+            let pos = { top: 0, left: 0, x: 0, y: 0 };
+
+            const mouseDownHandler = function (e) {
+                ele.style.cursor = 'grabbing';
+                ele.style.userSelect = 'none';
+
+                pos = {
+                    left: ele.scrollLeft,
+                    top: ele.scrollTop,
+                    x: e.clientX,
+                    y: e.clientY,
+                };
+
+                document.addEventListener('mousemove', mouseMoveHandler);
+                document.addEventListener('mouseup', mouseUpHandler);
+            };
+
+            const mouseMoveHandler = function (e) {
+                const dx = e.clientX - pos.x;
+                const dy = e.clientY - pos.y;
+
+                ele.scrollTop = pos.top - dy;
+                ele.scrollLeft = pos.left - dx;
+            };
+
+            const mouseUpHandler = function () {
+                ele.style.cursor = 'grab';
+                ele.style.removeProperty('user-select');
+
+                document.removeEventListener('mousemove', mouseMoveHandler);
+                document.removeEventListener('mouseup', mouseUpHandler);
+            };
+
+            ele.addEventListener('mousedown', mouseDownHandler);
+
+            window.stopScript = function () {
+                ele.removeEventListener('mousedown', mouseDownHandler);
+                document.removeEventListener('mousemove', mouseMoveHandler);
+                document.removeEventListener('mouseup', mouseUpHandler);
+            };
+        }
+
+        window.onload = init;
+            }
         </script>
     </body>
 </html>
