--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </header>
 
           <div class="container-fluid py-2">
-            <div id="cards" class="card-wrapper overflow-hidden">
+            <div id="cards" class="card-wrapper">
             <div id="cardsinner" class="d-flex flex-row overflow-hidden">
                 <div class="card card-body slide-body"
                     style="background-image:url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1630&q=80')">
