--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
             <!-- Navbar -->
             <nav class="navbar navbar-dark navbar-expand-md bg-dark justify-content-center fixed-top">
                 <div class="container nav-margin">
-                        <a class="navbar-brand d-flex w-50 me-auto navlogo" href="/index.html">M.L.D</a>
+                        <a class="navbar-brand d-flex w-50 me-auto navlogo" href="./index.html">M.L.D</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar3">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
                         <ul class="navbar-nav w-100 justify-content-between">
                             <li class="nav-item">
-                                <a class="nav-link" href="/contact.html">Contact</a>
+                                <a class="nav-link" href="./contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/work.html">Work</a>
+                                <a class="nav-link" href="./work.html">Work</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/about.html">About</a>
+                                <a class="nav-link" href="./about.html">About</a>
                             </li>
 
                         </ul>
                         <ul class="nav navbar-nav ms-auto w-100 justify-content-end">
 
                             <li class="nav-item active">
-                                <a class="nav-link" href="/index.html">Home</a>
+                                <a class="nav-link" href="./index.html">Home</a>
                             </li>
                         </ul>
                     </div>
@@ -326,7 +326,7 @@
                 <h1 class="display-4 fw-bold lh-1">See my other work</h1>
                 <p class="lead">See what else I've been working on.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                    <a href="/work.html" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" role="button">My Work ></a>
+                    <a href="./work.html" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" role="button">My Work ></a>
 
                 </div>
               </div>
