--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
           <div class="px-1 px-md-3 px-lg-5 d-flex justify-content-center align-items-center h-100">
               <div id="profile">
-                  <div id="profile-bio">
+                  <div id="profile-bio" class=" bg-light border shadow-lg">
                      <center><img id="profile-photo" src="images/profile.jpg"></center>
                      <div class="profile-box">
                       <h1 class="fs-4">Meigar Larasati Dewi</h1>
