--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,8 @@
 
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>Contact Me - Meigar</title>
+        <link rel="icon" type="image/png" href="images/icon.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css" />
