--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>My Portfolio - Meigar</title>
+        <link rel="icon" type="image/png" href="images/icon.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css" />
@@ -59,8 +60,8 @@
                         </ul>
                         <ul class="nav navbar-nav ms-auto w-100 justify-content-end">
 
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home</a>
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="index.html">Home</a>
                             </li>
                         </ul>
                     </div>
@@ -155,7 +156,7 @@
                 </div>
 
                 <div class="card card-body slide-body border shadow-lg"
-                    style="background-image:url('https://images.unsplash.com/photo-1504639725590-34d0984388bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80')">
+                    style="background-image:url('https://images.unsplash.com/photo-1507668077129-56e32842fceb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aW5zaWdodHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60')">
                     <div class="cardinfo">
                         <h3>Insight Communication</h3>
                         <ul role="list">
@@ -225,7 +226,7 @@
                   <a href="https://docs.google.com/presentation/d/e/2PACX-1vTPbQnKyoA6EWjsQj2GNDzuPx4-sN1Y6iT4Mr6ATztuWZD7pITVtG3kPuOIgPjUjw/pub?start=false&loop=false&delayms=5000" class="btn btn-outline-secondary btn-lg px-4" role="button">Case Study</a>
                 </div>
               </div>
-              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard">
+              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
                   <img class="rounded-lg-3 heroimage" src="images/tableau.png" alt="" width="720">
               </div>
             </div>
@@ -233,7 +234,7 @@
 <!-- TILE 2 -->
           <div class="container my-5">
             <div class="row p-4 pb-0 ps-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
-                <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard">
+                <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
                     <img class="rounded-lg-3 heroimage" src="images/samba.png" alt="" width="720">
                 </div>
               <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -261,7 +262,7 @@
 
                 </div>
               </div>
-              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard">
+              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
                   <img class="rounded-lg-3 heroimage" src="images/python.png" alt="" width="720">
               </div>
             </div>
@@ -269,7 +270,7 @@
 <!-- TILE 4 -->
           <div class="container my-5">
             <div class="row p-4 pb-0 ps-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
-                <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard">
+                <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
                     <img class="rounded-lg-3 heroimage" src="images/ecommerce.png" alt="" width="720">
                 </div>
               <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -293,7 +294,7 @@
 
                 </div>
               </div>
-              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard">
+              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
                   <img class="rounded-lg-3 heroimage" src="images/attritionflow.png" alt="" width="720">
               </div>
             </div>
@@ -301,7 +302,7 @@
 <!-- TILE 6 -->
           <div class="container my-5">
             <div class="row p-4 pb-0 ps-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
-                <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard">
+                <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
                     <img class="rounded-lg-3 heroimage" src="images/marketing.png" alt="" width="720">
                 </div>
               <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -330,7 +331,7 @@
 
                 </div>
               </div>
-              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard">
+              <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
                   <img class="rounded-lg-3 heroimage" src="images/work.png" alt="" width="720">
               </div>
             </div>
