--- a/work.html
+++ b/work.html
@@ -20,7 +20,8 @@
 
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>My work - Meigar</title>
+        <link rel="icon" type="image/png" href="images/icon.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -83,7 +84,7 @@
           <a href="https://docs.google.com/presentation/d/e/2PACX-1vTPbQnKyoA6EWjsQj2GNDzuPx4-sN1Y6iT4Mr6ATztuWZD7pITVtG3kPuOIgPjUjw/pub?start=false&loop=false&delayms=5000" class="btn btn-outline-secondary btn-lg px-4" role="button">Case Study</a>
         </div>
       </div>
-      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard">
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
           <img class="rounded-lg-3 heroimage" src="images/tableau.png" alt="" width="720">
       </div>
     </div>
@@ -91,7 +92,7 @@
 <!-- TILE 2 -->
   <div class="container my-5">
     <div class="row p-4 pb-0 ps-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
-        <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard">
+        <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
             <img class="rounded-lg-3 heroimage" src="images/samba.png" alt="" width="720">
         </div>
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -119,7 +120,7 @@
 
         </div>
       </div>
-      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard">
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
           <img class="rounded-lg-3 heroimage" src="images/python.png" alt="" width="720">
       </div>
     </div>
@@ -127,7 +128,7 @@
 <!-- TILE 4 -->
   <div class="container my-5">
     <div class="row p-4 pb-0 ps-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
-        <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard">
+        <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
             <img class="rounded-lg-3 heroimage" src="images/ecommerce.png" alt="" width="720">
         </div>
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -151,7 +152,7 @@
 
         </div>
       </div>
-      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard">
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
           <img class="rounded-lg-3 heroimage" src="images/attritionflow.png" alt="" width="720">
       </div>
     </div>
@@ -159,7 +160,7 @@
 <!-- TILE 6 -->
   <div class="container my-5">
     <div class="row p-4 pb-0 ps-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
-        <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard">
+        <div class="col-lg-4 p-0 overflow-hidden shadow-lg heroimagecard rounded-top">
             <img class="rounded-lg-3 heroimage" src="images/marketing.png" alt="" width="720">
         </div>
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
