Final styling touches

--- a/about.html
+++ b/about.html
@@ -81,28 +81,28 @@
           background-repeat: no-repeat; background-size: cover; background-position: right center;
           
         ">
-        <div class="mask flex-grow-1 d-flex" style="background-color: rgba(0, 0, 0, 0.6);">
-          <div class=" d-flex flex-column justify-content-center align-items-center flex-grow-1 px-1 px-md-3 px-lg-5">
+        <div class="mask flex-grow-1 d-flex rounded-3" style="background-color: rgba(0, 0, 0, 0.6);">
+          <div class=" d-flex justify-content-center align-items-center  px-1 px-md-3 px-lg-5">
             <div class="px-1 px-md-3 px-lg-5">
-              <div id="profile" >
+              <div id="aboutbox" >
                   <div id="profile-bio" class=" bg-light border shadow-lg">
                      <img id="profile-photo" src="images/profile.jpg">
 
 
                     <div class="profilebiodiv">
-                    <div class="profile-bio">
+                    <div class="profile-bio px-1 px-md-3 px-lg-5">
                       <h1 class="mb-3">About Meigar</h1>
-                      <p class="lead">Aspiring Data Analyst</p>
-                      <p>
-                          Meigar is a highly motivated individual with a passion for data analysis and problem-solving.
-                          Having recently completed a RevoU Data Analyst Bootcamp, Meigar is eager to apply her skills
+                      <p class="lead fs-4">Aspiring Data Analyst</p>
+                      <p class="fs-6">
+                          Meigar is a highly motivated individual with a passion for <strong>data analysis</strong> and <strong>problem-solving</strong>.
+                          Having recently completed a <strong>RevoU Data Analyst Bootcamp</strong>, Meigar is eager to apply her skills
                           in real-world situations. 
-                          Meigar's interests include exploring new statistical techniques, learning
-                          programming languages like Python and T-SQL, and diving into the world of Data Visualization. In her
+                          Meigar's interests include exploring new <strong>data visualization</strong> techniques, <strong>learning
+                          programming</strong> languages like <strong>Python</strong> and <strong>T-SQL</strong>, and diving into the world of Data Visualization. In her
                           free time, Meigar enjoys music, photography, traveling to new places, and engaging in outdoor
                           activities like hiking.
                       </p>
-                      <p>Feel free to connect with Meigar on <a href="https://www.linkedin.com/in/meigar-s-pd-616434166/" target="_blank">LinkedIn</a> or send an email to <span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span> Meigarlarasatidewi122398@<!-- sdfjsdhfkjypcs -->gmail.com</p></p>
+                      <p class="fs-6">Feel free to connect with Meigar on <a href="https://www.linkedin.com/in/meigar-s-pd-616434166/" target="_blank">LinkedIn</a> or send an email to <span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span> Meigarlarasatidewi122398@<!-- sdfjsdhfkjypcs -->gmail.com</p></p>
                   
                     </div>
                   </div>
