--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,10 @@
           background-repeat: no-repeat; background-size: cover; background-position: right center;
           
         ">
-        <div class="mask flex-grow-1 d-flex" style="background-color: rgba(0, 0, 0, 0.6);">
+        <div class="mask flex-grow-1 d-flex rounded-3" style="background-color: rgba(0, 0, 0, 0.6);">
           <div class=" d-flex flex-column justify-content-center align-items-center flex-grow-1 px-1 px-md-3 px-lg-5">
             <div class="px-1 px-md-3 px-lg-5">
-              <div id="profile" >
+              <div id="profile" class="pt-5">
                   <div id="profile-bio" class=" bg-light border shadow-lg">
                      <center><img id="profile-photo" src="images/profile.jpg"></center>
                      <div class="profile-box">
