--- a/work.html
+++ b/work.html
@@ -70,12 +70,24 @@
             
           </header>
 
-<div class="workbackground fixed-top"></div>
+<div class="workbackground fixed-top parallax" style="background-image: url('https://images.pexels.com/photos/265152/pexels-photo-265152.jpeg');"></div>
+
 <!--Work Display Area-->
+
+<!--Work Title-->
+<div class="mask flex-grow-1 d-flex" style="background-color: rgba(0, 0, 0, 0.6); ">
+  <div class="container-fluid">
+    <div class="worktitle text-center m-5">
+      <h1 class="display-4 fw-bold lh-1 text-white">My Work</h1>      
+    </div>
+  </div>
+</div>
+
+
 
 <!-- TILE 1 -->
 <div class="container my-5">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light flex-wrap-reverse">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4 fw-bold lh-1">Trending Video Analysis Dashboard</h1>
         <p class="lead">See our in depth dashboard analysing Trending Videos by Country, Category, and Engagement Metrics.</p>
@@ -111,7 +123,7 @@
   </div>
 <!-- TILE 3 -->
   <div class="container my-5">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light flex-wrap-reverse">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4 fw-bold lh-1">Data Analysis with Pandas and Python</h1>
         <p class="lead">See my step by step work cleansing and analysing data in Python using Pandas and Numpy.</p>
@@ -143,7 +155,7 @@
   </div>
 <!-- TILE 5 -->
   <div class="container my-5">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light flex-wrap-reverse">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4 fw-bold lh-1">Thought Experiment - Reduce attrition rate in business.</h1>
         <p class="lead">In this thought experiment I framed business challenges as Data Questions.</p>
