--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
           
         ">
         <div class="mask flex-grow-1 d-flex rounded-3" style="background-color: rgba(0, 0, 0, 0.6);">
-          <div class=" d-flex justify-content-center align-items-center  px-1 px-md-3 px-lg-5">
+          <div class=" d-flex flex-column justify-content-center align-items-center flex-grow-1 px-1 px-md-3 px-lg-5">
             <div class="px-1 px-md-3 px-lg-5">
               <div id="aboutbox" >
                   <div id="profile-bio" class=" bg-light border shadow-lg">
