--- a/about.html
+++ b/about.html
@@ -1,22 +1,4 @@
-<!-- Write the homepage of a portfolio website using common components from bootstrap 5 -->
-<!-- Use the following components: -->
-<!-- Navbar -->
-<!-- full page Hero -->
-<!-- Jumbotron -->
-<!-- Cards -->
-<!-- Footer -->
-<!-- Use the following classes: -->
-<!-- Container -->
-<!-- Row -->
-<!-- Col -->
-<!-- Card -->
-<!-- Card-body -->
-<!-- Card-title -->
-<!-- Card-text -->
-<!-- Card-img -->
 
-<!-- Path: index.html -->
-<!-- Compare this snippet from html: -->
 
 <html>
     <head>
@@ -25,7 +7,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css" />
-        <link rel="stylesheet" href="css/contact.css"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -46,7 +27,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
-                        <ul class="navbar-nav w-100 justify-content-between">
+                        <ul class="navbar-nav w-100 justify-content-between align-items-center">
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
@@ -115,7 +96,6 @@
             
           </div>
           </div>
-<!-- Contact form -->
 
 
 
@@ -192,9 +172,7 @@
         </div>
         </footer>
         <script src="https://kit.fontawesome.com/574add0346.js" crossorigin="anonymous"></script>
-        <script src="js/contact.js"></script>
     </body>
 </html>
 
-<!-- With this one: -->
 
