--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,4 @@
-<!-- Write the homepage of a portfolio website using common components from bootstrap 5 -->
-<!-- Use the following components: -->
-<!-- Navbar -->
-<!-- full page Hero -->
-<!-- Jumbotron -->
-<!-- Cards -->
-<!-- Footer -->
-<!-- Use the following classes: -->
-<!-- Container -->
-<!-- Row -->
-<!-- Col -->
-<!-- Card -->
-<!-- Card-body -->
-<!-- Card-title -->
-<!-- Card-text -->
-<!-- Card-img -->
 
-<!-- Path: index.html -->
-<!-- Compare this snippet from html: -->
 
 <html>
     <head>
@@ -46,7 +28,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
-                        <ul class="navbar-nav w-100 justify-content-between">
+                        <ul class="navbar-nav w-100 justify-content-between align-items-center">
                             <li class="nav-item">
                                 <a class="nav-link active" href="contact.html">Contact</a>
                             </li>
@@ -106,6 +88,7 @@
                   </div>
                 </div>
             </div>
+            <!-- Contact form -->
                 <div class="px-1 px-md-3 px-lg-5">
                 <div class="container my-5 contactcard bg-light rounded-3 border shadow-lg">
                   <div class="row justify-content-center">
@@ -150,7 +133,7 @@
             
           </div>
           </div>
-<!-- Contact form -->
+
 
 
 
@@ -230,6 +213,3 @@
         <script src="js/contact.js"></script>
     </body>
 </html>
-
-<!-- With this one: -->
-
