--- a/work.html
+++ b/work.html
@@ -1,22 +1,4 @@
-<!-- Write the homepage of a portfolio website using common components from bootstrap 5 -->
-<!-- Use the following components: -->
-<!-- Navbar -->
-<!-- full page Hero -->
-<!-- Jumbotron -->
-<!-- Cards -->
-<!-- Footer -->
-<!-- Use the following classes: -->
-<!-- Container -->
-<!-- Row -->
-<!-- Col -->
-<!-- Card -->
-<!-- Card-body -->
-<!-- Card-title -->
-<!-- Card-text -->
-<!-- Card-img -->
 
-<!-- Path: index.html -->
-<!-- Compare this snippet from html: -->
 
 <html>
     <head>
@@ -30,7 +12,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="css/styles.css" />
-        <link rel="stylesheet" href="css/contact.css"/>
 
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     </head>
@@ -46,7 +27,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
-                        <ul class="navbar-nav w-100 justify-content-between">
+                        <ul class="navbar-nav w-100 justify-content-between align-items-center">
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
@@ -273,9 +254,6 @@
         </div>
         </footer>
         <script src="https://kit.fontawesome.com/574add0346.js" crossorigin="anonymous"></script>
-        <script src="js/contact.js"></script>
     </body>
 </html>
-
-<!-- With this one: -->
 
