updated social icons

--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,8 @@
                       <div class="social-icons">
                         <p><a href="https://www.google.com/"><i class="fab fa-facebook-f"></i></a></p>
                        <!-- <p><a href="https://www.google.com/"><i class="fa fa-github"></i></a></p>-->
-                        <p><a href="https://www.google.com/"><i class="fab fa-google"></i></a></p>
-                        <p><a href="https://www.linkedin.com/in/meigar-s-pd-616434166/" role="button"><i class="fab fa-linkedin-in"></i></a></p>
+                       <p><a href="https://public.tableau.com/app/profile/meigar.larasati.dewi" class="align-items-center justify-content-center"><img class="fab tableautop" fill="#fdbbaf"; src="images/logo-tableau-pink.svg"></img></a></p>
+                       <p><a href="https://www.linkedin.com/in/meigar-s-pd-616434166/" role="button"><i class="fab fa-linkedin-in"></i></a></p>
                       </div>
                     </div>
                   </div>
