--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <div class="social-icons">
                         <p><a href="https://www.google.com/"><i class="fab fa-facebook-f"></i></a></p>
                        <!-- <p><a href="https://www.google.com/"><i class="fa fa-github"></i></a></p>-->
-                        <p><a href="https://public.tableau.com/app/profile/meigar.larasati.dewi"><i class=""></i></a></p>
+                        <p><a href="https://public.tableau.com/app/profile/meigar.larasati.dewi" class="align-items-center justify-content-center"><img class="fab tableautop" fill="#fdbbaf"; src="images/logo-tableau-pink.svg"></img></a></p>
                         <p><a href="https://www.linkedin.com/in/meigar-s-pd-616434166/" role="button"><i class="fab fa-linkedin-in"></i></a></p>
                       </div>
                     </div>
@@ -86,7 +86,12 @@
           </div>
 
          
-
+          <a
+          class="btn btn-outline-light btn-floating m-1 tableaubutton"
+          href="https://public.tableau.com/app/profile/meigar.larasati.dewi"
+          role="button"
+          ><i class="fab"><img class="tableau" src="images/logo-tableau.svg"></img> </i
+      ></a>
 
 
 
