--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                     <div class="profile-bio">
                       <p>You can call me Meigar. I'm an Indonesian <strong>Data Analyst, Data Researcher and Data Modeler</strong>. Making some cool things with coffee, code and complex thinking.</p>
                       <div class="social-icons">
-                        <p><a href="https://www.google.com/"><i class="fab fa-facebook-f"></i></a></p>
+                        <p><a href="https://www.facebook.com/dewimuharranimei"><i class="fab fa-facebook-f"></i></a></p>
                        <!-- <p><a href="https://www.google.com/"><i class="fa fa-github"></i></a></p>-->
                        <p><a href="https://public.tableau.com/app/profile/meigar.larasati.dewi" class="align-items-center justify-content-center"><img class="fab tableautop" fill="#fdbbaf"; src="images/logo-tableau-pink.svg"></img></a></p>
                        <p><a href="https://www.linkedin.com/in/meigar-s-pd-616434166/" role="button"><i class="fab fa-linkedin-in"></i></a></p>
@@ -153,7 +153,7 @@
                 <!-- Facebook -->
                 <a
                     class="btn btn-outline-light btn-floating m-1"
-                    href="#!"
+                    href="https://www.facebook.com/dewimuharranimei"
                     role="button"
                     ><i class="fab fa-facebook-f"></i
                 ></a>
