--- a/work.html
+++ b/work.html
@@ -208,13 +208,13 @@
                 ><i class="fab"><img class="tableau" src="images/logo-tableau.svg"></img> </i
             ></a>
     
-                <!-- Google -->
+                <!-- Google 
                 <a
                     class="btn btn-outline-light btn-floating m-1"
                     href="#!"
                     role="button"
                     ><i class="fab fa-google"></i
-                ></a>
+                ></a>-->
     
                 <!-- Instagram 
                 <a
