--- a/about.html
+++ b/about.html
@@ -127,13 +127,13 @@
                 role="button"
                 ><i class="fab"><img class="tableau" src="images/logo-tableau.svg"></img> </i
             ></a>
-                <!-- Google -->
+                <!-- Google 
                 <a
                     class="btn btn-outline-light btn-floating m-1"
                     href="#!"
                     role="button"
                     ><i class="fab fa-google"></i
-                ></a>
+                ></a>-->
     
                 <!-- Instagram 
                 <a
